# devdash

./: .gitignore  CHANGELOG.md  CHEATSHEET.txt  CONTRIBUTING.md  LICENSE  README.md  TESTING_GUIDE.md  check-tasks.sh  pyproject.toml  start-devdash.sh
docs/: CONFIG_EDITOR.md  config-example.toml
src/devdash/: __init__.py  config_editor_modal.py  git_panel.py  help_modal.py  main.py  system_panel.py  task_edit_modal.py  task_export.py  task_model.py  tasks_panel.py  timer_panel.py
src/devdash/config/: __init__.py  defaults.py  loader.py  schema.py  validator.py
tests/: __init__.py  test_task_export.py  test_task_model.py  test_tasks.py  test_timer.py
tests/test_config/: test_loader.py  test_schema.py  test_validator.py
